gitops/apps/african-art-exhibition-concept/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: african-art-exhibition-concept
  namespace: african-art-exhibition-concept
spec:
  type: ClusterIP
  selector:
    app: african-art-exhibition-concept
  ports:
    - name: http
      port: 80
      targetPort: 80
